added 3ds check and some validations
